--- a/Pegawai Abonsura Factory/view/style.css
+++ b/Pegawai Abonsura Factory/view/style.css
@@ -240,15 +240,16 @@
     background-color: #FF9B50;
 }
 .cari-data-nik{
-    height: 43vh;
+    min-height: 43vh;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
 }
 .cari-data-nik form{
     height: 40vh;
-    width: 50%;
+    width: 100%;
     display: flex;
     padding: 20px;
     flex-direction: column;
@@ -322,15 +323,15 @@
     color: #C63D2F;
 }
 .tampil-data{
-    min-height: 40vh;
-    min-width: 50%;
+    min-height: 30vh;
+    min-width: 100%;
     display: flex;
     margin-top: 10px;
     flex-direction: column;
     justify-content:center;
-    align-items: center;
+    align-items: flex-start;
     color: #B31312;
-    border: solid #B31312 3px;
+    outline: none;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -339,10 +340,23 @@
 }
 .tampil-data form{
     width: 100%;
-    height: 100%;
+    min-height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 10px ;
+}
+.tampil-data h3{
+    margin-bottom: 20px;
+    margin-left: 30px;
+
+}
+.tampil-data p{
+    margin-left: 30px;
+    margin-top: -10px;
+}
+.tampil-data div{
+    margin-bottom: 20px;
 }
 .pilih-data{
     margin: 5px;
@@ -454,6 +468,49 @@
     color: #FFD93D;
     margin-left: 15px;
 }
+.formbaru{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    bottom: 0;
+    border: #FF9B50 solid 5px;
+    box-shadow: 1px 1px 3px 3px #7E1717;
+    background-color: #B31312;
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
+    max-width: 100%;
+}
+.formbaru textarea{
+    width: 300px;
+    height: 40px;
+    border: none;
+    text-align: center;
+    outline: none;
+    padding-left: auto;
+    padding-right: auto;
+    padding-top: 15px;
+    padding-bottom: auto;
+    border-radius: 10px;
+    background-color: #FF9B50;
+    color: #B31312;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+.formbaru textarea:focus{
+    background-color: #FFD93D;
+    color: #B31312;
+}
+.formbaru input[type=radio]{
+    width: 10px;
+    height: 10px;
+}
+.formbaru input[type=text]{
+    width: 300px;
+    height: 40px;
+}
 .golongan{
     border: solid #FFD93D 3px;
     display: flex;
@@ -481,7 +538,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 17px;
-    width: 44%;
+    width: 100%;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
